# crawler

./: README.md
backend/: .gitignore  CLAUDE.md  README.md  alembic.ini  app.py  celery_config.py  llm_processor.py  pyproject.toml  repl_helper.py  start.sh  tasks.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0682a35ea2ad_add_relevant_link_lists_to_extract_job_.py  2099ce8d5a16_drop_html_column_from_scrape_job_results.py  23ada8c48b41_add_more_fields_to_llm_data_extraction_.py  35c51903060f_add_review_status_column_to_extract_job_.py  3b6078d2f4ac_add_dataset_presence_to_summarize_job_.py  42d481c223fd_add_model_tracking_to_llm_responses.py  5f25ea90bb9e_addd_trustworthiness_and_relevanyc_to_.py  914169454f8e_move_link_extraction_to_scrape_job_table.py  c42e1e8e0088_add_prompt_column_to_extract_job_.py  cbc50e5f7ae1_initial_migration.py  (+1 more)
backend/api/: app.py  auth.py  dependencies.py  dto.py  lifespan.py  models.py
backend/database/: __init__.py  entities.py  models.py  repositories.py  session.py  values.py
backend/domain/: entities.py  exceptions.py  types.py  values.py
backend/jobs/: scraping.py
backend/nlp_processing/: chatbot.py  exceptions.py  function_registry.py  page_link_extractor.py  page_summarizer.py  source_analyzer.py  structured_completion.py
backend/scraping/: content_scraper.py  html_scraper.py  html_to_markdown_converter.py  manual_link_extractor.py  pdf_scraper.py
backend/service/: chatbot_service.py  exceptions.py  services.py  unit_of_work.py
backend/tasks/: __init__.py  config.py  crawl.py  crawl_tasks.py
(+24 files in other folders)
